fixed overflow

--- a/resources/assets/sass/modules/_m-web-wrap.scss
+++ b/resources/assets/sass/modules/_m-web-wrap.scss
@@ -2,7 +2,7 @@
 	height: 100vh;
 	max-height: 100vh;
 	padding: 0px 0px 80px 0px;
-	overflow: scroll;
+	overflow-y: scroll;
 	scroll-behavior: smooth;
   -webkit-overflow-scrolling: touch;
 }
